fix (form): remove the overflow that happens with the Select's options

--- a/packages/form/src/fields/Select/Select.scss
+++ b/packages/form/src/fields/Select/Select.scss
@@ -28,9 +28,9 @@
     padding: 12px;
 
     cursor: default;
-    margin-right: 3px;
 
     overflow-x: hidden;
+    overflow-y: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 
